--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/dist/css/bootstrap.min.css";
+@import "https://fonts.googleapis.com/css?family=Nunito&display=swap";
+@import "https://fonts.googleapis.com/css?family=Abel&display=swap";
+// @import "./variables";
+
+@mixin app-buttons($color, $background, $border-color) {
+  color: $color;
+  background: $background;
+  border: 1px solid $border-color;
+  &:hover {
+    background: $color;
+    color: $background;
+  }
+}
+body {
+  margin: 0;
+  padding: 0;
+  // font-family: "Abel", sans-serif;
+  font-family: "Nunito", sans-serif;
+}
