--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -22,5 +22,10 @@
         >Contact</a
       >
     </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLinkActive="active" routerLink="/portfolio"
+        >Portfolio</a
+      >
+    </li>
   </ul>
 </nav>
