--- a/src/app/thought/thought.component.html
+++ b/src/app/thought/thought.component.html
@@ -1,3 +1,53 @@
 <app-header></app-header>
-
+<div class="container">
+  <div class="row">
+    <div class="col-12">
+      <h1>Thought</h1>
+      <p class="mb-3">
+        My technical wirting is about software development and you can find them
+        below:
+      </p>
+      <div class="row mt-3">
+        <div class="col-lg-6 col-md-6 col-sm-12">
+          <a
+            target="_blank"
+            href="https://dev.to/favouremma18/uploading-an-image-to-firebase-cloud-storage-with-angular-2aeh"
+            >Uploading an Image to Firebase Cloud Storage with Angular
+          </a>
+          <p class="mt-3 date">Feb 17, 2020</p>
+          <p>
+            In this tutorial, we are going to learn how to upload an image to
+            Firebase Cloud Storage from an Angular Project. We’ll be using
+            AngularFire library for setting up Firebase in the Angular web
+            application. <br />
+            Firebase is Google's mobile platform that helps you quickly develop
+            high-quality apps and grow your business.
+          </p>
+          <div>
+            <button><a routerLink="/thought">View More</a></button>
+          </div>
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-12">
+          <a
+            target="_blank"
+            href="https://dev.to/favouremma18/uploading-an-image-to-firebase-cloud-storage-with-angular-2aeh"
+            >Uploading an Image to Firebase Cloud Storage with Angular
+          </a>
+          <p class="mt-3 date">Feb 17, 2020</p>
+          <p>
+            In this tutorial, we are going to learn how to upload an image to
+            Firebase Cloud Storage from an Angular Project. We’ll be using
+            AngularFire library for setting up Firebase in the Angular web
+            application. <br />
+            Firebase is Google's mobile platform that helps you quickly develop
+            high-quality apps and grow your business.
+          </p>
+          <div>
+            <button><a routerLink="/thought">View More</a></button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 <app-footer></app-footer>
