--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,3 +1,68 @@
 <app-header></app-header>
+<div class="container">
+  <!-- contact -->
+  <div class="row">
+    <div class="col-12">
+      <h1>Contact</h1>
+      <p>
+        Have a project you would like me to work on, Dm me using the form below.
+      </p>
+      <div class="row">
+        <div class="col-lg-12 col-md-6 col-sm-12">
+          <form class="border border-light">
+            <div class="row">
+              <div class="col-lg-6 col-md-6 col-sm-12">
+                <input
+                  type="text"
+                  class="form-control mb-4 "
+                  placeholder="Full Name"
+                />
+              </div>
+              <div class="col-lg-6 col-md-6 col-sm-12">
+                <input
+                  type="email"
+                  id="defaultLoginFormEmail"
+                  class="form-control mb-4 "
+                  placeholder="E-mail"
+                />
+              </div>
+            </div>
 
+            <div class="row">
+              <div class="col-lg-6 col-md-6 col-sm-12">
+                <input
+                  type="number"
+                  id="defaultLoginFormNumber"
+                  class="form-control mb-4 "
+                  placeholder="Number"
+                />
+              </div>
+              <div class="col-lg-6 col-md-6 col-sm-12">
+                <select class="form-control mb-4" name="" id="">
+                  <option value="choose"></option>
+                  <option value="Tech">Techincal Writing</option>
+                  <option value="web">Web Development</option>
+                </select>
+              </div>
+            </div>
+
+            <textarea
+              name=""
+              class="col-12"
+              id=""
+              cols="30"
+              rows="10"
+              placeholder="Give a brief description of the project"
+            ></textarea>
+
+            <!-- Sign in button -->
+            <button class="my-4" type="submit">
+              Submit
+            </button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 <app-footer></app-footer>
