--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,10 +8,12 @@
   color: $color;
   background: $background;
   border: 1px solid $border-color;
-  &:hover {
-    background: $color;
-    color: $background;
-  }
+  border-radius: 10px;
+  padding: 5px 10px;
+  // &:hover {
+  //   background: $color;
+  //   color: $background;
+  // }
 }
 body {
   margin: 0;
