--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -15,7 +15,9 @@
             />
             <div class="card-body">
               <p class="card-text">
-                <a href="" target="_blank">View</a>
+                <a href="https://fayvik.github.io/blogpost/" target="_blank"
+                  >View</a
+                >
               </p>
             </div>
           </div>
@@ -30,7 +32,9 @@
             />
             <div class="card-body">
               <p class="card-text">
-                <a href="" target="_blank">View</a>
+                <a href="https://qtalk-4dd0f.firebaseapp.com" target="_blank"
+                  >View</a
+                >
               </p>
             </div>
           </div>
@@ -43,9 +47,12 @@
               width="100%"
               height="86%"
             />
+
             <div class="card-body">
               <p class="card-text">
-                <a href="" target="_blank">View</a>
+                <a href="https://freepik-99146.firebaseapp.com" target="_blank"
+                  >View</a
+                >
               </p>
             </div>
           </div>
