--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="container">
+<div class="container pl-5 pr-5">
   <!-- contact -->
   <div class="row">
     <div class="col-12">
@@ -48,13 +48,13 @@
 
             <textarea
               name=""
-              class="col-12"
+              class="col-lg-6 col-sm-12 col-sm-12"
               id=""
               cols="30"
               rows="10"
               placeholder="Give a brief description of the project"
             ></textarea>
-
+            <br />
             <!-- Sign in button -->
             <button class="my-4" type="submit">
               Submit
