--- a/src/app/thought/thought.component.html
+++ b/src/app/thought/thought.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
-<div class="container">
-  <div class="row">
+<div class="container pl-5 pr-5">
+  <div class="row justify-content-between">
     <div class="col-12">
       <h1>Thought</h1>
       <p class="mb-3">
@@ -8,7 +8,7 @@
         below:
       </p>
       <div class="row mt-3">
-        <div class="col-lg-6 col-md-6 col-sm-12">
+        <div class="col-lg-5 col-md-5 col-sm-12">
           <a
             target="_blank"
             href="https://dev.to/favouremma18/uploading-an-image-to-firebase-cloud-storage-with-angular-2aeh"
@@ -27,7 +27,7 @@
             <button><a routerLink="/thought">View More</a></button>
           </div>
         </div>
-        <div class="col-lg-6 col-md-6 col-sm-12">
+        <div class="col-lg-5 col-md-5 col-sm-12">
           <a
             target="_blank"
             href="https://dev.to/favouremma18/uploading-an-image-to-firebase-cloud-storage-with-angular-2aeh"
