--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,17 +1,17 @@
 <app-header></app-header>
-<div class="container">
+<div class="container pl-5 pr-5">
   <!-- portfolio -->
   <div class="row">
     <div class="col-12">
       <h1>portfolio</h1>
-      <div class="row mt-3">
-        <div class="col-lg-6 col-md-6 col-sm-12 mb-3">
+      <div class="row mt-3 justify-content-between">
+        <div class="col-lg-5 col-md-5 col-sm-12 mb-5">
           <div class="card" style="width: 33rem; height: 45vh">
             <img
               src="../../assets/Screenshot (71).png"
               alt=""
               width="100%"
-              height="86%"
+              height="80%"
             />
             <div class="card-body">
               <p class="card-text">
@@ -22,13 +22,13 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-6 col-md-6 col-sm-12 mb-3">
+        <div class="col-lg-5 col-md-5 col-sm-12 mb-5">
           <div class="card" style="width: 33rem; height: 45vh">
             <img
               src="../../assets/Screenshot (72).png"
               alt=""
               width="100%"
-              height="86%"
+              height="80%"
             />
             <div class="card-body">
               <p class="card-text">
@@ -39,13 +39,13 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-6 col-md-6 col-sm-12 mt-5">
+        <div class="col-lg-5 col-md-5 col-sm-12 mb-5">
           <div class="card" style="width: 33rem; height: 45vh">
             <img
               src="../../assets/Screenshot (73).png"
               alt=""
               width="100%"
-              height="86%"
+              height="80%"
             />
 
             <div class="card-body">
