--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="container pl-5 pr-5">
+<div class="container">
   <!-- contact -->
   <div class="row">
     <div class="col-12">
