--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,12 +1,12 @@
 <app-header></app-header>
-<div class="container pl-5 pr-5">
+<div class="container">
   <!-- portfolio -->
   <div class="row">
     <div class="col-12">
       <h1>portfolio</h1>
-      <div class="row mt-3 justify-content-between">
-        <div class="col-lg-5 col-md-5 col-sm-12 mb-5">
-          <div class="card" style="width: 33rem; height: 45vh">
+      <div class="row mt-3">
+        <div class="col-lg-6 col-md-6 col-sm-12 mb-5">
+          <div class="card" style="height: 45vh">
             <img
               src="../../assets/Screenshot (71).png"
               alt=""
@@ -22,8 +22,8 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-5 col-md-5 col-sm-12 mb-5">
-          <div class="card" style="width: 33rem; height: 45vh">
+        <div class="col-lg-6 col-md-6 col-sm-12 mb-5">
+          <div class="card" style="height: 45vh">
             <img
               src="../../assets/Screenshot (72).png"
               alt=""
@@ -39,8 +39,8 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-5 col-md-5 col-sm-12 mb-5">
-          <div class="card" style="width: 33rem; height: 45vh">
+        <div class="col-lg-6 col-md-6 col-sm-12 mb-5">
+          <div class="card" style="height: 45vh">
             <img
               src="../../assets/Screenshot (73).png"
               alt=""
