--- a/src/app/thought/thought.component.html
+++ b/src/app/thought/thought.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="container pl-5 pr-5">
+<div class="container">
   <div class="row justify-content-between">
     <div class="col-12">
       <h1>Thought</h1>
