--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -57,6 +57,23 @@
             </div>
           </div>
         </div>
+        <div class="col-lg-6 col-md-6 col-sm-12 mb-5">
+          <div class="card" style="height: 45vh">
+            <img
+              src="../../assets/Screenshot (88).png"
+              alt=""
+              width=""
+              height="80%"
+            />
+            <div class="card-body">
+              <p class="card-text">
+                <a href="https://bookapp-264711.firebaseapp.com" target="_blank"
+                  >View</a
+                >
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
